--- a/style.css
+++ b/style.css
@@ -4,47 +4,40 @@ body {
     padding: 0;
     background-color: #864343;
     font-size: 16px;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    height: 100vh;
 }
 
 header {
     background-color: #412121;
-    color: #fff;
+    color: #ffb6b6;
     padding: 20px 0;
     text-align: center;
-    position: fixed;
-    width: 100%;
-    top: 0;
 }
 
 #content {
-    overflow: scroll;
-    position: fixed;
-    left: 0;
-    right: 0;
+    color: #ffb6b6;
+    overflow-y: auto;
     padding: 20px;
-    bottom: var(--footer-height, 125px);;
-    top: 154px;
 }
 
 footer {
     text-align: center;
     padding: 10px 0;
     background-color: #412121;
-    color: #fff;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+    color: #ffb6b6;
 }
 
 .footerLink {
     color: #898989;
     margin-left: 1%;
-    margin-right: 1%
+    margin-right: 1%;
 }
 
 /* Customize the scrollbar */
 ::-webkit-scrollbar {
-    width: 12px; /* Width of the scrollbar */
+    width: 5px; /* Width of the scrollbar */
 }
 
 ::-webkit-scrollbar-track {
@@ -52,10 +45,10 @@ footer {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #888; /* Color of the scrollbar thumb */
+    background: #502929; /* Color of the scrollbar thumb */
     border-radius: 6px; /* Rounded corners for the scrollbar thumb */
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #555; /* Color of the scrollbar thumb when hovered */
+    background: #2d1717; /* Color of the scrollbar thumb when hovered */
 }
