--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     font-size: 16px;
     display: grid;
     grid-template-rows: auto 1fr auto;
-    height: var(--vh);
+    height: 100dvh;
 }
 
 header {
